Now with documentation creater!

--- a/README
+++ b/README
@@ -1,6 +1,6 @@
 PHP Worker Environment Lite 
 Version: 1.05
-PHP Version: 5.3.1
+PHP Version: working in 5.2 - 5.2.9
 
 About:
 ----------------------------------------
