--- a/README
+++ b/README
@@ -2,6 +2,8 @@ PHP Worker Environment Lite
 Version: 1.05
 PHP Version: working in 5.2 - 5.2.9
 
+# This project wont be maintained anymore
+
 About:
 ----------------------------------------
 If you dont want to configurate before you can start
